[package]
name = "StackOverflowRs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.44.0"
crossterm = "0.27.0"
html2text = "0.6.0"
quick_cache = "0.4.0"
ratatui = { version = "0.23.0", features = ["all-widgets", "serde"] }
reqwest = { version = "0.11.20", features = ["serde_json", "blocking", "json", "gzip"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
webbrowser = "0.8.11"


# Make the build process faster
[build]
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

